--- a/puzzle2.html
+++ b/puzzle2.html
@@ -37,9 +37,6 @@
       width: 100%;
       max-width: 400px;
       border-radius: 10px;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
     }
   </style>
 </head>
@@ -55,7 +52,7 @@
       <button type="button" onclick="checkAnswer()">Submit</button>
     </form>
     <p id="feedback"></p>
-    <img src="Photos/SubFolder/1.jpg" alt="Puzzle Image" onerror="this.onerror=null; this.src='placeholder.jpg';">
+    <img src="https://raw.githubusercontent.com/anarchaotic1/surprise/main/1.png" alt="Puzzle Image">
   </div>
 
   <script>
