--- a/puzzle9.html
+++ b/puzzle9.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Puzzle 7</title>
+  <title>Puzzle 9</title>
   <style>
     body {
       font-family: 'Comic Sans MS', cursive, sans-serif;
@@ -86,7 +86,7 @@
         targetsLeft--;
         if (targetsLeft === 0) {
           document.getElementById("feedback").textContent = "All targets down! Proceeding...";
-          setTimeout(() => { window.location.href = 'puzzle10.html'; }, 2000);
+          setTimeout(() => { window.location.href = 'final.html'; }, 2000);
         }
       }
     }
