--- a/puzzle8.html
+++ b/puzzle8.html
@@ -43,7 +43,7 @@
 <body>
   <div class="container">
     <h1>Puzzle 8</h1>
-    <img src="https://raw.githubusercontent.com/anarchaotic1/surprise/main/10.jpg?raw=true" alt="Puzzle Image">
+    <img src="https://raw.githubusercontent.com/anarchaotic1/surprise/main/10.png?raw=true" alt="Puzzle Image">
     <p>Who is dis so cute? &lt;3</p>
     <form id="quizForm">
       <label>
