--- a/final.html
+++ b/final.html
@@ -71,7 +71,7 @@
 
   <h1>🎉 Happy Valentine's Day! 🎈</h1>
   <div class="highlight-box">
-    <img src="https://raw.githubusercontent.com/anarchaotic1/surprise/main/11.png" alt="Valentine Image">
+    <img src="https://raw.githubusercontent.com/anarchaotic1/surprise/main/11.jpg" alt="Valentine Image">
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1"></script>
